--- a/package.json
+++ b/package.json
@@ -2,45 +2,94 @@
   "name": "@notely/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:client": "nx run client:serve",
+    "start:server": "nx run server:serve",
+    "lint": "nx run-many --target=lint --all",
+    "lint:fix": "nx run-many --target=lint:fix --all"
+  },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^5.16.7",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "10.0.2",
+    "@nrwl/react": "^19.6.2",
     "axios": "^1.6.0",
+    "mysql2": "3.11.0",
+    "react": "18.3.1",
+    "react-color": "2.19.3",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tailwind-merge": "^2.5.2",
+    "tslib": "^2.3.0",
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nx/devkit": "19.6.2",
     "@nx/eslint": "19.6.2",
     "@nx/eslint-plugin": "19.6.2",
     "@nx/jest": "19.6.2",
     "@nx/js": "19.6.2",
     "@nx/nest": "19.6.2",
     "@nx/node": "19.6.2",
+    "@nx/playwright": "19.6.2",
+    "@nx/react": "19.6.2",
+    "@nx/vite": "19.6.2",
     "@nx/web": "19.6.2",
     "@nx/webpack": "19.6.2",
     "@nx/workspace": "19.6.2",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-color": "^3.0.12",
+    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.3.1",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "^29.7.0",
     "eslint": "~8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "19.6.2",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
+    "vitest": "^1.3.1",
     "webpack-cli": "^5.1.4"
   }
 }
