--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^5.16.7",
     "@nestjs/common": "^10.0.2",
@@ -21,6 +22,7 @@
     "@nestjs/typeorm": "10.0.2",
     "@nrwl/react": "^19.6.2",
     "axios": "^1.6.0",
+    "class-variance-authority": "^0.7.0",
     "mysql2": "3.11.0",
     "react": "18.3.1",
     "react-color": "2.19.3",
