--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nrwl/react": "^19.6.2",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
+    "html-react-parser": "^5.1.16",
     "mysql2": "3.11.0",
     "react": "18.3.1",
     "react-color": "2.19.3",
