--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.3.1",
     "react-color": "2.19.3",
     "react-dom": "18.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
