socket.io, multi-app, etc...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "typescript",
         "typescriptreact"
       ],
-      "eslint.format.enable": true
+      "eslint.format.enable": true,
+      "typescript.tsdk": "node_modules/typescript/lib"
 }
