--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start:client": "nx run client:serve",
     "start:server": "nx run server:serve",
+    "start:demo-js": "nx run demo-js:serve",
     "lint": "nx run-many --target=lint --all",
     "lint:fix": "nx run-many --target=lint:fix --all"
   },
@@ -19,8 +20,11 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^10.4.4",
     "@nestjs/typeorm": "10.0.2",
+    "@nestjs/websockets": "^10.4.4",
     "@nrwl/react": "^19.6.2",
+    "@tanstack/react-query": "^5.59.16",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "html-react-parser": "^5.1.16",
@@ -28,10 +32,10 @@
     "react": "18.3.1",
     "react-color": "2.19.3",
     "react-dom": "18.3.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.2",
     "tslib": "^2.3.0",
     "typeorm": "0.3.20"
@@ -57,6 +61,7 @@
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
@@ -87,6 +92,7 @@
     "nx": "19.6.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
