--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:server": "nx run server:serve",
     "start:demo-js": "nx run demo-js:serve",
     "lint": "nx run-many --target=lint --all",
-    "lint:fix": "nx run-many --target=lint:fix --all",
+    "lint:fix": "nx run-many --target=lint --all --fix",
     "type-check": "yarn tsc -- -b ./apps/client/tsconfig.json ./apps/server/tsconfig.json ./apps/demo-js/tsconfig.json ./libs/notely-js/tsconfig.json --incremental"
   },
   "private": true,
