--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "html-react-parser": "^5.1.16",
     "mysql2": "3.11.0",
     "react": "18.3.1",
@@ -37,7 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io-client": "^4.8.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^3.4.0",
     "tslib": "^2.3.0",
     "typeorm": "0.3.20"
   },
