--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@notely/notely-js": ["libs/notely-js/src/index.ts"],
+      "@notely/notely-js": ["libs/notely-js/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp", "dist"],
-  "include": ["apps/**/*", "libs/**/*", ".eslintrc.json"],
+  "include": ["apps/**/*", "libs/**/*", ".eslintrc.json"]
 }
