--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run Lint
-        run: yarn lint
+        run: yarn lint --output-style=stream-without-prefixes --color
 
       - name: Run TypeScript Check
         run: yarn type-check
