--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -1,7 +1,20 @@
 {
   "root": true,
-  "plugins": ["@nx", "react", "@typescript-eslint", "prettier", "simple-import-sort", "import"],
-  "extends": ["airbnb", "airbnb-typescript", "airbnb/hooks", "plugin:@typescript-eslint/recommended", "plugin:@typescript-eslint/recommended-requiring-type-checking"],
+  "plugins": [
+    "@nx",
+    "react",
+    "@typescript-eslint",
+    "prettier",
+    "simple-import-sort",
+    "import"
+  ],
+  "extends": [
+    "airbnb",
+    "airbnb-typescript",
+    "airbnb/hooks",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -13,6 +26,7 @@
     "simple-import-sort/imports": "error",
     "import/no-extraneous-dependencies": "off",
     "import/no-named-as-default": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "react/react-in-jsx-scope": "off",
     "linebreak-style": "error",
     "react/jsx-props-no-spreading": "off",
